--- a/index.html
+++ b/index.html
@@ -1,2 +1,2 @@
-
-<h1>gsf.audiovisual@gmail.com</h1>
+<html><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8"></head><body><h1>gsf.audiovisual@gmail.com</h1>
+</body></html>
