--- a/index.html
+++ b/index.html
@@ -1,2 +1,9 @@
-<html><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8"></head><body><h1>gsf.audiovisual@gmail.com</h1>
-</body></html>
+<html>
+  <head>
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+  </head>
+  
+  <body>
+    <h1>mail gsf.audiovisual@gmail.com</h1>
+  </body>
+</html>
