--- a/index.html
+++ b/index.html
@@ -1,9 +1,38 @@
-
+<!DOCTYPE html>
+<html lang="en">
   <head>
-    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>GSF - Audiovisual</title>
+    <link rel="stylesheet" href="style-index.css" />
   </head>
-  
-  <body>
-    <h1>mail - gsf.audiovisual@gmail.com</h1>
-  </body>
-
+    <body>
+      <header>
+        <div class="container">
+            <div class="menu">
+                <a href="#" class="logo">GSF-AudioVisual</a>
+                <input type="checkbox" id="menu" />
+                <label for="menu">
+                    <img src="images/menu.png" class="menu-icono" alt="">
+                </label>
+                <nav class="navbar">
+                    <ul>                        
+                        <li><a href="mailto:gsf.audiovisual@gmail.com">gsf.audiovisual@gmail.com</a></li>
+                    </ul>
+                </nav>
+            </div>
+            <div class="Sello">
+                <div align="center"><img width="75%" height="75%" src="images/sello_guix.png" alt="">
+            </div>
+            <div class="header-content">
+                <div class="header-txt">
+                    <a href="El_Cor_En_Flama.html" class="btn"><h1>El COR EN FLAMA</h1></a>
+                    <p>Projecte de protesta social i reivindicació republicana.</p>                      
+            </div>
+            <div class="header-txt2">
+              <a href="mailto:gsf.audiovisual@gmail.com" class="btn2">gsf.audiovisual@gmail.com</a>
+            </div>
+        </div>
+      </header>
+    </body>
+</html>
